--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,46 +1,18 @@
 {% include "base.html" %}
 
 <div class="container-fluid">
-    <!--Table-->
-    <table class="table table-hover">
 
-        <!--Table head-->
-        <thead>
-            <tr>
-                <th class="d-none d-sm-block">Project</th>
-                <th>Doc Path</th>
-                <th class="d-none d-sm-block">Original Path</th>
-                <th>Revisions</th>
-                <th>Status</th>
-            </tr>
-        </thead>
-        <!--Table head-->
+    <ul class="list-group col-md-3">
+        {% for lang, stat in lang_stat.items() %}
+            <a href="{{ url_for('lang_index', lang=lang) }}">
+                <li class="list-group-item d-flex justify-content-between align-items-center">
+                    {{ lang }}
+                    <span class="badge badge-success badge-pill">{{ stat.updated }} Up-to-date</span>
+                    <span class="badge badge-warning badge-pill">{{ stat.outdated }} Needs update</span>
+                    <span class="badge badge-light badge-pill">{{ stat.ignored }} Error</span>
+                </li>
+            </a>
+        {% endfor %}
+    </ul>
 
-        <!--Table body-->
-        <tbody>
-                <!--td colspan="2">Larry the Bird</td-->
-            {% for lang, files in results.items() %}
-                {% for file in files %}
-                    <tr>
-                        <td class="d-none d-sm-block">{{ lang }}</td>
-                        <td><a href="{{ svnweb_url }}{{ file.path }}">{{ file.path }}</a></td>
-                        <td class="d-none d-sm-block"><a href="{{ svnweb_url }}{{ file.orig_path }}">{{ file.orig_path }}</a></td>
-                        <td>r{{ file.rev }} => r{{ file.orig_rev }}</td>
-                        {% if file.orig_rev == "SVN Error" %}
-                            <td>SVN Error, original file may be moved.</td>
-                        {% elif file.up_to_date == True %}
-                            <td class="table-success">Up to date.</td>
-                        {% elif file.up_to_date == False %}
-                            <td class="table-warning">Outdated. <a href="{{ file.diff_url }}">[See Diff from Original]</a></td>
-                        {% elif file.up_to_date == None %}
-                            <td>Regex Error, check comment format.</td>
-                        {% endif %}
-                    </tr>
-                {% endfor %}
-            {% endfor %}
-        </tbody>
-        <!--Table body-->
-
-    </table>
-    <!--Table-->
 </div>
