Update app/views.py: Add handler for revision comparison
Closes https://github.com/yzgyyang/docmon/issues/1

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -9,7 +9,7 @@
                     {{ lang }}
                     <span class="badge badge-success badge-pill">{{ stat.updated }} Up-to-date</span>
                     <span class="badge badge-warning badge-pill">{{ stat.outdated }} Needs update</span>
-                    <span class="badge badge-light badge-pill">{{ stat.ignored }} Error</span>
+                    <span class="badge badge-light badge-pill">{{ stat.ignored }} Skipped</span>
                 </li>
             </a>
         {% endfor %}
