--- a/app/templates/lang_index.html
+++ b/app/templates/lang_index.html
@@ -26,14 +26,12 @@
                         <td><a href="{{ svnweb_url }}{{ file.path }}">{{ file.path }}</a></td>
                         <td class="d-none d-sm-block"><a href="{{ svnweb_url }}{{ file.orig_path }}">{{ file.orig_path }}</a></td>
                         <td>r{{ file.rev }} => r{{ file.orig_rev }}</td>
-                        {% if file.orig_rev == "SVN Error" %}
-                            <td>SVN Error, original file may be moved.</td>
-                        {% elif file.up_to_date == True %}
-                            <td class="table-success">Up to date.</td>
+                        {% if file.up_to_date == True %}
+                            <td class="table-success">{{ file.message }}</td>
                         {% elif file.up_to_date == False %}
-                            <td class="table-warning">Outdated. <a href="{{ file.diff_url }}">[See Diff from Original]</a></td>
+                            <td class="table-warning">{{ file.message }} <a href="{{ file.diff_url }}">[See Diff from Original]</a></td>
                         {% elif file.up_to_date == None %}
-                            <td>Regex Error, check comment format.</td>
+                            <td>{{ file.message }}</td>
                         {% endif %}
                     </tr>
                 {% endfor %}
