Update app/templates/*, app/views.py: Add last updated time
Closes https://github.com/yzgyyang/docmon/issues/5

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -13,6 +13,8 @@
                 </li>
             </a>
         {% endfor %}
+        <br>
+        Last updated: {{ time_str }}
     </ul>
 
 </div>
